[gd_scene load_steps=7 format=2]

[ext_resource path="res://gestion/ManagementScreen/EventScreen/Event3/Event3.gd" type="Script" id=1]
[ext_resource path="res://addons/GodotTIE/text_interface_engine.gd" type="Script" id=2]
[ext_resource path="res://addons/GodotTIE/GodotTIE_icon.png" type="Texture" id=3]
[ext_resource path="res://cave_story64.tres" type="DynamicFont" id=4]
[ext_resource path="res://button_theme.tres" type="Theme" id=5]
[ext_resource path="res://cave_story128.tres" type="DynamicFont" id=6]

[node name="EventScreen" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="MainContainer" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 33.0
margin_top = 27.0
margin_right = 768.0
margin_bottom = 993.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 46
alignment = 2
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="tie" type="ReferenceRect" parent="MainContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 735.0
margin_bottom = 891.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
_sections_unfolded = [ "Theme", "custom_styles" ]
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
SCROLL_ON_MAX_LINES = true
BREAK_ON_MAX_LINES = true
AUTO_SKIP_WORDS = true
LOG_SKIPPED_LINES = true
SCROLL_SKIPPED_LINES = false
FONT = ExtResource( 4 )
PRINT_INPUT = true
BLINKING_INPUT = true
INPUT_CHARACTERS_LIMIT = -1

[node name="DialogueContainer" type="VBoxContainer" parent="MainContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 937.0
margin_right = 735.0
margin_bottom = 966.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 29
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Choice" type="Label" parent="MainContainer/DialogueContainer" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 735.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
text = "Your choice ?"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="ChoiceButtonsContainer" type="HBoxContainer" parent="MainContainer/DialogueContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 735.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="Choice1" type="Button" parent="MainContainer/DialogueContainer/ChoiceButtonsContainer" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 334.0
margin_right = 400.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "1"
flat = true
align = 1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="Choice2" type="Button" parent="MainContainer/DialogueContainer/ChoiceButtonsContainer" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 330.0
margin_right = 404.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "2"
flat = true
align = 1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="ChoiceButtonsContainer2" type="HBoxContainer" parent="MainContainer/DialogueContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 29.0
margin_right = 735.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="Choice3" type="Button" parent="MainContainer/DialogueContainer/ChoiceButtonsContainer2" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 283.0
margin_right = 357.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "3"
flat = true
align = 1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="Choice4" type="Button" parent="MainContainer/DialogueContainer/ChoiceButtonsContainer2" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 330.0
margin_right = 404.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "4"
flat = true
align = 1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[connection signal="pressed" from="MainContainer/DialogueContainer/ChoiceButtonsContainer/Choice1" to="." method="_on_Choice1_pressed"]

[connection signal="pressed" from="MainContainer/DialogueContainer/ChoiceButtonsContainer/Choice2" to="." method="_on_Choice2_pressed"]

[connection signal="pressed" from="MainContainer/DialogueContainer/ChoiceButtonsContainer2/Choice3" to="." method="_on_Choice3_pressed"]

[connection signal="pressed" from="MainContainer/DialogueContainer/ChoiceButtonsContainer2/Choice4" to="." method="_on_Choice4_pressed"]


